# spark-match-05-data-pipeline

./: .dvcignore  .env.example  .gitignore  Diccionario de datos.md  README.md  dvc.yaml  pyproject.toml  requirements.txt
.github/: CODEOWNERS
data/: filtered.csv
snapshots/: raw_20260613_021109.xlsx
snapshots/configs/: feature_config_20260613_040108.json  feature_config_20260613_043041.json  feature_config_20260705_200042.json
snapshots/features/: features_20260613_040107.csv  features_20260613_042319.csv  features_20260613_043041.csv  features_20260613_043705.csv  features_20260613_044017.csv  features_20260705_200041.csv
src/: config.py  data_clean.py  feature_engineering.py  ingestion.py  riasec_tagging.py
src/sources/: README.md  __init__.py  base.py  exceptions.py  ponte_en_carrera.py  registry.py
tests/: config.py  conftest.py  test_riasec_tagging.py
tests/sources/: base.py  ponte_en_carrera.py  registry.py
